--- a/SMS_Api/Web.config
+++ b/SMS_Api/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SMSContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SMSContext-20190213152735; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SMSContext-20190213152735.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="SMSContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SMSContext-20190213152735; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SMSContext-20190213152735.mdf" providerName="System.Data.SqlClient" />
+    <add name="SMS_Api.Properties.Settings.StationaryManagementSystemConnectionString" connectionString="Data Source=DESKTOP-JGRRIQ7;Initial Catalog=StationaryManagementSystem;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="StationaryManagementSystemEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JGRRIQ7;initial catalog=StationaryManagementSystem;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
