--- a/SMS_Api/Web.config
+++ b/SMS_Api/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="SMSContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SMSContext-20190213152735; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SMSContext-20190213152735.mdf" providerName="System.Data.SqlClient" />
-    <add name="SMS_Api.Properties.Settings.StationaryManagementSystemConnectionString" connectionString="Data Source=DESKTOP-JGRRIQ7;Initial Catalog=StationaryManagementSystem;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
+    <add name="StationaryManagementSystemConnectionString" connectionString="Data Source=DESKTOP-JGRRIQ7;Initial Catalog=StationaryManagementSystem;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
     <add name="StationaryManagementSystemEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-JGRRIQ7;initial catalog=StationaryManagementSystem;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
