keeping in sync

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,8 @@ SMS_Library/obj
 StationaryManagementSystem/bin
 StationaryManagementSystem/obj
 StationaryManagementSystem/.vs
+StationaryManagementSystem/packages
+StationaryManagementSystem/scripts
+StationaryManagementSystem
 .vs
 packages
