added json response settings

--- a/SMS_Api/SMS_Api.csproj
+++ b/SMS_Api/SMS_Api.csproj
@@ -194,6 +194,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Common\Settings\JsonResponseSettings.cs" />
     <Compile Include="Controllers\InstitutionsController.cs" />
     <Compile Include="Controllers\InventariesController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
