Added Order Repository and Order Interface

--- a/SMS_Api/SMS_Api.csproj
+++ b/SMS_Api/SMS_Api.csproj
@@ -241,6 +241,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\Orders\IOrderRepository.cs" />
+    <Compile Include="Repositories\Orders\OrderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
