--- a/SMS_Api/Web.config
+++ b/SMS_Api/Web.config
@@ -61,6 +61,10 @@
                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Unity.Abstractions" publicKeyToken="6d32ff45e0ccc69f" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
     <system.codedom>
