--- a/SMS_Api/packages.config
+++ b/SMS_Api/packages.config
@@ -27,5 +27,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Unity" version="5.2.0" targetFramework="net461" />
+  <package id="Unity.WebAPI" version="5.3.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
